Bati Sengul (c) 2013

== Changes from 1.2 to 1.3 ==
* Bug fix: any text in bibtex that doesn't begin with @ is now treated like a comment. 

== Changes from 1.1 to 1.2 ==
* Feature: remembers the latest opened files.
* Feature: uses the last directory user acted within to open/save files.
* Feature: sorts through the tables when clicked on the column header.
* Bug fix: new file caused you to save over the last opened file.

 == Changes from 1.0 to 1.1 ==
 * Bug fix: the last bracket was missed when parsing bibtex entries.